--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
+  width: 0;
   height: 5px;
 }
 
@@ -26,7 +26,7 @@ a {
 }
 
 .category-btn:hover {
-  background-color: #FC1503 !important;
+  background-color: #fc1503 !important;
   color: white !important;
 }
 
@@ -56,7 +56,7 @@ a {
   outline: none;
   border: none;
   padding: 7px 15px;
-  margin: 10px 0px;
+  margin: 10px 0;
   border-radius: 20px;
   transition: all 0.3s ease;
 }
@@ -67,7 +67,7 @@ a {
   }
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
   .copyright {
     display: none !important;
   }
